Added search handler
Added an event listener for the search button.

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <form onSubmit='searchStudent(event)'>
       <b>Last Name:</b>
       <input id="ln_id" type="text" name="last_name" data-attr="last_name">
-      <input type="submit" name="search" value="Search">
+      <input id="search_person_id" type="submit" name="search" value="Search">
     </form>
 
     <b>Students Found:</b><br>
