--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     </script>
   </head>
   <body>
-    <form onSubmit='searchStudent(event)'>
+    <form onSubmit='createPerson(event)'>
       <b>Last Name:</b>
       <input id="ln_id" type="text" name="last_name" data-attr="last_name">
       <input id="search_person_id" type="submit" name="search" value="Search">
