Added Grades stuff
Added a template for what we need to work on for Grades to appear when the student is clicked.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.min.js"></script>
     <script id="p-list-template" type="text/x-handlebars-template">
     	{{#each people}}
-    	<li>{{first_name}} {{last_name}}</li>
+    	<li id="s_list_id">{{first_name}} {{last_name}}</li>
+    	{{/each}}
+    </script>
+    <script id="s-grade-template" type="text/x-handlebars-template">
+    	{{#each grade}}
+    	<tr>
+        <td>{{class_name}}</td> <td>{{letter_grade}}</td>
+      </tr>
     	{{/each}}
     </script>
   </head>
@@ -26,10 +33,10 @@
   	</ul>
 
     <b>Grades for "Student":</b><br>
-    <table border="1px">
+    <table id="grade_table_id" border="1px">
       <tr>
         <th>Course</th>
-        <th>GPA</th>
+        <th>Grade</th>
       </tr>
     </table>
   </body>
