--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.min.js"></script>
     <script id="p-list-template" type="text/x-handlebars-template">
     	{{#each people}}
-    	<li id="s_list_id">{{first_name}} {{last_name}}</li>
+    	<li>{{first_name}} {{last_name}}</li>
     	{{/each}}
     </script>
     <script id="s-grade-template" type="text/x-handlebars-template">
