--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <script src='javascripts/globalVars.js'></script>
     <script src='javascripts/model/Person.js'></script>
     <script src='javascripts/view/ListView.js'></script>
+    <script src='javascripts/view/TableView.js'></script>
     <script src='javascripts/control/PersonPageControl.js'></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/4.0.12/handlebars.min.js"></script>
     <script id="p-list-template" type="text/x-handlebars-template">
