Cleaned and comments
Cleaned more of the code and added comments.

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <ul id='person_list_id'>
   	</ul>
 
-    <b>Grades for "Student":</b><br>
+    <b>Grades:</b><br>
     <table id="grade_table_id" border="1px">
       <tr>
         <th>Course</th>
